# basics_of_async_in_python

./: .gitignore  README.md  less_1.py  less_2.py  less_4.py  lesson_5.py  main.py  pyproject.toml  test.py
