[project]
name = "basics-of-async-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".idea",
    "temp",
    "../temp",
    ".coverage",
    ".env",
    "cov_html",
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.12
target-version = "py312"

# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # eradicate - removes commented-out code from Python files 
    # https://docs.astral.sh/ruff/rules/#eradicate-era 
    "ERA", 
    # FastAPI rules
    # https://docs.astral.sh/ruff/rules/#fastapi-fast
    "FAST",
    "I",
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "COM",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "TD",
    "RUF",
    "N",
]
ignore = ["N815", "TD002", "TD003", "RUF003"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["COM812", "I"]
unfixable = ["B", "RUF001"]

logger-objects = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.flake8-bandit]
hardcoded-tmp-directory = ["/tmp", "/temp", "../temp", "../tmp"]
